Fixed alignment and padding

--- a/scss/_portfolio.scss
+++ b/scss/_portfolio.scss
@@ -1,7 +1,7 @@
 @import 'colors';
 
 .showcase {
-    padding: 120px 0;
+    padding: 80px 0;
     .description {
         padding: 30px 50px;
         .technologies {
